tests/neg/erased-type.scala
class Test {
  erased type T // error
}
